# MSOSA-Toolbox

./: .gitignore  CLAUDE.md  Ontology-Approach-to-Knowledge.md  README.md  bump-version.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: enchancement.md  idea.md
.github/workflows/: msosa-model-exporter-build.yml  packaging.yml  python-mcp-publish.yml  uaf-neo4j-build.yml
Test/: test_data_er_regression.py  test_data_marking.py  test_gds_available.py  test_graphml_export.py  test_mcp_server.py  test_neo4j_connection.py  test_owl_axioms.py  test_rdf_parity.py  test_shacl_shapes.py  test_sparql_endpoint.py  test_traverser_regression.py
Test/queries/: regression_data_er.cypher  regression_traverser.cypher
bloom/: uaf-perspective.json
claude_desktop_config/: claude_desktop_config.json
cypher/: gds-cookbook.cypher  init_uaf_graph.cypher  query-cookbook.cypher
dashboard/: Dockerfile  app.py  requirements.txt
docker-compose/: .devcontainer.json  .env.example  docker-compose.dashboard.yml  docker-compose.fuseki.yml  docker-compose.graphdb.yml  docker-compose.neodash-kiosk.yml  docker-compose.neodash.yml  docker-compose.yml
docker-compose/webvowl/: Dockerfile
docs/personas/: business-analysts.md  capability-owners.md  data-architects.md  decision-makers.md  enterprise-architects.md  implementation-teams.md  process-owners.md  solution-architects.md
graph_mcp_driver/: server.py
msosa-model-exporter/: CLAUDE.md  README.md  install-msosa-jars.ps1  install-msosa-jars.sh  pom.xml
msosa-model-exporter/scripts/: MSOSA_output.txt  registry-diff.groovy
neo4j_mcp_driver/: server.py
ontology/: NEXT-STEPS.md  n10s-mappings.cypher  uaf-mvo-axioms.ttl  uaf-mvo.ttl  uml-data-marking.ttl
ontology/codegen/: dump_to_rdf.py  generate_mvo.py  parity-fixture.json  sparql_to_graphml.py  validate_shacl.py
ontology/dump/: uaf-instance.ttl
ontology/graphdb/: repository-config.ttl
ontology/queries/: agent-memory-phase-delta.sparql  data-marking-examples.sparql  semantic-search-examples.sparql
ontology/retired/: RETIRED.md  n10s-init.cypher  (+2 more)
uaf-neo4j-plugin/: CLAUDE.md  README.md  install-msosa-jars.ps1  pom.xml
(+82 files in other folders)
