[project]
name = "graph-mcp-driver"
version = "1.0.0"
description = "MCP server that exposes Neo4j (Cypher) and Apache Jena Fuseki (SPARQL) tools to Claude Desktop for querying UAF 1.2 / SysML 1.6 / BPMN 2.0 knowledge graphs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "steveb93", email = "steve93.sb@gmail.com" }]
keywords = ["mcp", "neo4j", "sparql", "fuseki", "uaf", "sysml", "bpmn", "knowledge-graph", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp",
    "neo4j",
    "httpx",
    "rdflib",
]

[project.urls]
Homepage = "https://github.com/steveb93/MSOSA-Toolbox"
Repository = "https://github.com/steveb93/MSOSA-Toolbox"
Issues = "https://github.com/steveb93/MSOSA-Toolbox/issues"

[project.scripts]
graph-mcp-driver = "graph_mcp_driver.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graph_mcp_driver"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
# Stage 3 scaffolding: SHACL validation of the dumped UAF instance graph.
# Pulled in by ontology/codegen/validate_shacl.py and the MCP server's
# validate_shacl() tool. Optional so the core MCP server stays lightweight.
ontology = ["pyshacl>=0.25"]

[tool.pytest.ini_options]
testpaths = ["Test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "neo4j: marks tests that require a live Neo4j instance (deselect with -m 'not neo4j')",
]